# Location

./: pyproject.toml  requirements.txt
.vercel/: project.json
location/: main.py  models.py
